--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "aws-sdk": "^2.1323.0",
     "axios": "^1.3.4",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.0.3",
     "dynamoose": "^3.1.0",
     "express": "^4.18.2",
