--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dotenv": "^16.0.3",
     "dynamoose": "^3.1.0",
     "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
     "nodemon": "^2.0.20"
   },
   "scripts": {
